--- a/rootdir/etc/init.d851.rc
+++ b/rootdir/etc/init.d851.rc
@@ -1,5 +1,5 @@
 import init.lge.usb.rc
-import /init.lge.svelte.rc
+import init.lge.svelte.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
@@ -64,15 +64,11 @@ on init
     setprop vold.encrypt_progress ""
 
 on fs
-    mount_all fstab.d851
+    mount_all ./fstab.d851
 
     # Keeping following partitions outside fstab file. As user may not have
     # these partition flashed on the device. Failure to mount any partition in fstab file
     # results in failure to launch late-start class.
-
-    wait /dev/block/platform/msm_sdcc.1/by-name/cache
-    exec /system/bin/e2fsck -y /dev/block/platform/msm_sdcc.1/by-name/cache
-    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/cache /cache nosuid nodev noatime barrier=1 noauto_da_alloc errors=continue
 
     wait /dev/block/platform/msm_sdcc.1/by-name/persist
     exec /system/bin/e2fsck -y /dev/block/platform/msm_sdcc.1/by-name/persist
